# dsa-sensei

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: Dockerfile
backend/app/: main.py
backend/app/agents/: interview_agent.py  learning_plan_agent.py  tutor_agent.py
backend/app/db/: database.py  ingest_data.py  models.py
backend/app/services/: rag_service.py
data/: arrays copy 2.txt  arrays copy 3.txt  arrays copy 4.txt  arrays copy 5.txt  arrays copy 6.txt  arrays copy 7.txt  arrays copy.txt  arrays.txt  binary_search.txt
docs/: GETTING_STARTED.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
infra/: docker-compose.yml  requirements.txt
