[project]
name = "dsa-sensei"
version = "0.1.0"
description = ""
authors = [
    {name = "mitthhuu3110",email = "3110mithilesh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
